Login on enter.

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -5,10 +5,10 @@
 	</div>
 	<div class="Container100 Responsive100">
 		<div class="row marginTop10">
-			<input id="username" type="text" placeholder="Username" size="30" pInputText [(ngModel)]="name" />
+			<input id="username" type="text" placeholder="Username" (keyup.enter)="login()" size="30" pInputText [(ngModel)]="name" />
 		</div>
 		<div class="row marginTop10">
-			<input id="password" size="30" pInputText type="password" [(ngModel)]="password" placeholder="Password" />
+			<input id="password" size="30" pInputText type="password" (keyup.enter)="login()" [(ngModel)]="password" placeholder="Password" />
 		</div>
 		<div class="row marginTop10">
 			<button id="Login" pButton type="button" (click)="login()" icon="fa-sign-in" label="Log in"></button>
