--- a/src/app/customerDetail/customerDetail.html
+++ b/src/app/customerDetail/customerDetail.html
@@ -9,34 +9,42 @@
 <div class="EmptyBox10"></div>
 
 <div class="Card ShadowEffect">
-	<h2 class="CardTopic BorderBottom" style="font-weight:bold;">{{ (user.role === 'Customer'
-? 'Current subscription cost':'Current Revenue')}} <span class="Fright FontBold">{{customer.revenue}}</span></h2>
+	<h2 class="CardTopic BorderBottom Fs22" style="font-weight:bold;">{{ (user.role === 'Customer'
+? 'Current subscription':'Current Revenue')}} <span class="Fright FontBold">{{customer.revenue | currency:'USD':true:'1.0-0'}}</span></h2>
 	<div class="EmptyBox5"></div>
-	<div [class.Orange]="customer.expiry < 60" class="Container100 FontRobotoLight">Subscription expires in <span class="FontBold"> {{customer.expiry}} </span> days</div>
+	<div [class.Orange]="customer.expiry < 90" class="Container100 FontRobotoLight">Subscription expires in <span class="FontBold"> {{customer.expiry}} </span> days</div>
 	<div *ngIf="nonCustomer()">
-		<div class="Container60">
+		<div class="Container50">
 			<div class="EmptyBox10"></div>
-			<div class="FontRobotoRegular Fs18">Projected revenue on renewal: </div>
+			<div class="FontRobotoRegular Fs18">Projected difference on renewal: </div>
 		</div>
-		<div class="Container40 FontRobotoRegular"><span [class.Green]="customer.difference > -1" [class.Orange]="customer.difference < 0" class="Fs50 FontRobotoLight FontBold Fright">{{customer.difference}}</span></div>
+		<div class="Container50 FontRobotoRegular">
+			<div class="EmptyBox10"></div>
+			<span [class.Green]="customer.difference > -1" [class.Orange]="customer.difference < 0" class="Fs50 FontRobotoLight Fright">{{customer.difference  | currency:'USD':true:'1.0-0'}}</span></div>
 	</div>
 </div>
 <div class="EmptyBox10"></div>
 
 <div class="Card ShadowEffect White " [class.OrangeBack]="needsAction()" [class.GreenBack]="! needsAction()">
-	<h2 class="CardTopic White BorderBottom" style="font-weight:bold;">{{(customer.status ? customer.status : 'Proposed')}} plan
+	<h2 class="CardTopic Fs22 White BorderBottom" style="font-weight:bold;">{{(customer.status ? customer.status : 'Proposed')}} plan
 		<span *ngIf="needsAction()" class="Fright badge RedBack Fs18 FontRobotoLight" style="font-weight:normal;" (click)="newPlan()">Needs your action</span>
 		<span *ngIf="!needsAction(customer)" class="Fright badge BoldGrayBack Fs18 FontRobotoLight" style="font-weight:normal;">No action for you</span></h2>
 	<div class="EmptyBox5"></div>
 	<div *ngIf="customer.status == null" class="Container100 FontRobotoLight">No plan has been proposed yet.</div>
 	<div *ngIf="customer.status">
-		<div class="Container60">
+		<div class="Container50">
 			<div class="EmptyBox10"></div>
-			<div class="FontRobotoRegular Fs18">{{ (user.role === 'Customer' ? 'Proposed subscription cost':'Projected revenue for proposed plan:')}} </div>
+			<div class="FontRobotoRegular Fs18">{{ (user.role === 'Customer' ? 'Proposed difference':'Projected revenue difference:')}} </div>
 		</div>
-		<div class="Container40 FontRobotoRegular Red"><span [class.White]="(customer.newPlanDifference > -1)" class="Fs50 FontRobotoLight Fright">{{ (customer.newPlanDifference
-	<0? '': '+') + customer.newPlanDifference }}</span></div>
-		<div *ngIf="! nonCustomer()" class="FontRobotoRegular">Total <h2 class="CardTopic Fright" style="font-weight: bold;">$ {{customer.revenue + customer.newPlanDifference}}</h2> </div>
+		<div class="Container50 FontRobotoRegular Red">
+			<div class="EmptyBox10"></div>
+			<span [class.White]="(customer.newPlanDifference > -1)" class="Fs50 FontRobotoLight Fright">{{ (customer.newPlanDifference
+	<0? '': '+') + (customer.newPlanDifference  | currency:'USD':true:'1.0-0') }}</span>
+		</div>
+		<div class="EmptyBox5"></div>
+		<div *ngIf="! nonCustomer()" class=" FontRobotoRegular">Total
+			<h2 class="CardTopic Fright" style="font-weight: bold;">{{(customer.revenue + customer.newPlanDifference)  | currency:'USD':true:'1.0-0'}}</h2>
+		</div>
 	</div>
 	<div class="EmptyBox10"></div>
 	<button *ngIf='displayPlanButton()' class="Fright GrayButton RaisedButton" id="Plan" pButton type="button" (click)="newPlan()" icon="fa-pencil" label="{{getPlanButtonLabel()}}"></button>
@@ -44,8 +52,8 @@
 </div>
 <div class="EmptyBox10"></div>
 
-<div class="Card ShadowEffect" *ngIf="displayUpdates()">
-	<h2 class="CardTopic" style="font-weight:bold; padding-bottom: 0px;">Status Updates </h2>
+<div class="Card ShadowEffect " *ngIf="displayUpdates()">
+	<h2 class="CardTopic Fs22" style="font-weight:bold; padding-bottom: 0px;">Status Updates </h2>
 	<div *ngFor="let m of messages">
 		<div class="Separator"> </div>
 		<div class="EmptyBox5"></div>
@@ -58,17 +66,26 @@
 <div class="EmptyBox10"></div>
 
 <div class="Card ShadowEffect">
-	<h2 class="CardTopic" style="font-weight:bold; padding-bottom: 0px;">Current subscription</h2>
+	<h2 class="CardTopic Fs22" style="font-weight:bold; padding-bottom: 0px;">Current subscription</h2>
 	<div *ngFor="let p of products">
-		<div class="Separator"> </div>
-		<div class="EmptyBox5"></div>
-		<div class="Container60">
-			<span class="LeadenGreen "> {{p.name}} </span> <span class="Fs18">({{p.count}})</span>
-			<br/> <span class="FontRobotoLight Fs18">{{p.description}}</span>
+		<div *ngIf="p.count > 0">
+			<div class="Separator"> </div>
+			<div class="EmptyBox5"></div>
+			<div class="Container60">
+				<span class="LeadenGreen "> {{p.name}} </span> <span class="Fs18">({{p.count}})</span>
+				<br/> <span class="FontRobotoLight Fs18">{{p.description}}</span>
+			</div>
+			<div class="Container40">
+				<div class="EmptyBox5"></div><span class="Fright">{{p.price | currency:'USD':true:'1.0-0'}}</span></div>
+			<div class="EmptyBox5"></div>
 		</div>
-		<div class="Container40">
-			<div class="EmptyBox5"></div><span class="Fright">{{p.price}}</span></div>
-		<div class="EmptyBox5"></div>
 	</div>
+
+	<button class="Fright GrayButton RaisedButton" id="Plan" pButton type="button" (click)="op1.toggle($event)" icon="fa-external-link" label="Customer Contract"></button>
+	<p-overlayPanel #op1>
+		<p-panel header="Customer Contract">
+			Placeholder for accessing and downloading current Customer Contract
+		</p-panel>
+	</p-overlayPanel>
 </div>
 <div class="EmptyBox10"></div>
