--- a/src/app/planDetail/planDetail.html
+++ b/src/app/planDetail/planDetail.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<span class="Fleft"><a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a></span>
 	<span class="col-xs-12 Center FontBold">{{ (customer.status
-? 'Modify Proposed Plan':'Review and Submit your New Plan')}} </span>
+? 'Modify '+ customer.status + ' Plan':'Review and Submit your New Plan')}} </span>
 	<div class="SeparatorFull" style="border-color: darkgray;"></div>
 </div>
 
@@ -9,32 +9,36 @@
 <div class="Fs50 FontBold BoldGray">{{customer.name}}</div>
 <div class="EmptyBox10"></div>
 <div class="Card ShadowEffect LeadenGreenBack White">
-	<h2 class="CardTopic White BorderBottom" style="font-weight:bold;">Proposed plan <span [class.White]="(customer.newPlanDifference > -1)" class=" FontRobotoLight Fright">{{ (customer.newPlanDifference
-<0? '': '+') + customer.newPlanDifference }}</span> </h2>
+	<h2 class="CardTopic Fs22 White BorderBottom " style="font-weight:bold;">Proposed plan <span class="FontRobotoLight Fright" [class.Red]="(customer.newPlanDifference < 0)" [class.White]="(customer.newPlanDifference > -1)" >{{ (customer.newPlanDifference
+<0? '': '+') + (customer.newPlanDifference  | currency:'USD':true:'1.0-0') }}</span> </h2>
 	<div class="EmptyBox5"></div>
 	<div class="Container60">
 		<div class="EmptyBox10"></div>
-		<div class="FontRobotoRegular Fs18">{{ (user.role === 'Customer' ? 'Proposed subscription cost':'Projected revenue for proposed plan:')}} </div>
+		<div class="FontRobotoLight Fs18">{{ (user.role === 'Customer' ? 'Proposed subscription cost':'Projected revenue for proposed plan:')}} </div>
 	</div>
-	<div class="Container40 FontRobotoLight Fs50"><span class="Fright">$ {{customer.revenue  + customer.newPlanDifference}}</span></div>
+	<div class="Container40 FontRobotoLight Fs50">
+			<div class="EmptyBox10"></div>
+		<span class="Fright">{{(customer.revenue  + customer.newPlanDifference) | currency:'USD':true:'1.0-0'}}</span></div>
 	<div class="EmptyBox10"></div>
 </div>
 <div class="EmptyBox10"></div>
 
 <div class="Card ShadowEffect">
-	<h2 class="CardTopic" style="font-weight:bold; padding-bottom: 0px;">Subscription details
-		<button class="Fright RaisedButton" id="Plan" pButton type="button" (click)="modify()" icon="fa-pencil"></button>
+	<h2 class="CardTopic Fs22" style="font-weight:bold; padding-bottom: 0px;">Subscription details
+		<button class="Fright RaisedButton" *ngIf="nonCustomer()" id="Plan" pButton type="button" (click)="modify()" icon="fa-pencil"></button>
 		<div class="EmptyBox5"></div></h2>
 	<div *ngFor="let p of newProducts">
-		<div class="Separator"> </div>
-		<div class="EmptyBox5"></div>
-		<div class="Container60">
-			<span class="LeadenGreen "> {{p.name}} </span> <span class="Fs18">({{p.count}})</span>
-			<br/> <span class="FontRobotoLight Fs18">{{p.description}}</span>
+		<div *ngIf="p.count > 0">
+			<div class="Separator"> </div>
+			<div class="EmptyBox5"></div>
+			<div class="Container60">
+				<span class="LeadenGreen "> {{p.name}} </span> <span class="Fs18">({{p.count}})</span>
+				<br/> <span class="FontRobotoLight Fs18">{{p.description}}</span>
+			</div>
+			<div class="Container40">
+				<div class="EmptyBox5"></div><span class="Fright">{{p.price | currency:'USD':true:'1.0-0'}}</span></div>
+			<div class="EmptyBox5"></div>
 		</div>
-		<div class="Container40">
-			<div class="EmptyBox5"></div><span class="Fright">{{p.price}}</span></div>
-		<div class="EmptyBox5"></div>
 	</div>
 </div>
 <div class="EmptyBox10"></div>
