--- a/src/app/product-planner/product-planner.html
+++ b/src/app/product-planner/product-planner.html
@@ -1,54 +1,64 @@
-<div>
-	
-	<div class="marginTop10">
-		<div class="row">
-			<span class="col-xs-3 FLeft"><a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a></span>
-			<span class="col-xs-6 Center Bold">Customer Details</span>
-		</div>
-		<hr class="Center" />
-	</div>
+<div class="row">
+	<span class="Fleft"><a (click)="back()"><i class="fa fa-chevron-left" aria-hidden="true"></i> Back</a></span>
+	<span class="col-xs-12 Center FontBold">{{ (customer.status
+? 'Modify Products in Proposed Plan':'Select Products for New Plan')}} </span>
+	<div class="SeparatorFull" style="border-color: darkgray;"></div>
+</div>
 
+<p-growl [value]="msgs"></p-growl>
 
+<div class="Card ShadowEffect">
+	<h2 class="CardTopic BorderBottom" style="font-weight:bold;">Proposed Revenue <span class="Fright FontBold">{{plannedPrice | currency:'USD':true:'1.0-0'}}</span></h2>
 	<div>
-		<span class="row" style="font-size: 250%;font-weight: bold;">{{customer.name}}</span>
-		<div class="row">
-			<span class="col-xs-8" style="font-size: 110%;margin-top: 5px;"> Current revenue: </span>
-			<span class="col-xs-4" style="font-size: 150%;     text-align: right;"> {{customer.revenue}}</span>
+		<div class="Container60">
+			<div class="EmptyBox10"></div>
+			<div class="FontRobotoRegular Fs18">Projected difference on renewal: </div>
 		</div>
-		<span [class.red]="customer.expiry < 60" class="row" style="font-size: 110%;">Expires in <span class="Bold"> {{customer.expiry}} </span> days</span>
-		<div class="row">
-			<span class="col-xs-8" style="font-size: 110%;margin-top: 15px;"> Projected revenue for current plan:</span>
-			<span [class.differenceGreen]="plannedPrice - initialPrice > -1" [class.differenceRed]="plannedPrice - initialPrice < 0" class="col-xs-4" style="  font-size: 250%;     text-align: right;"> {{plannedPrice - initialPrice}}</span>
-		</div>
-		<hr class="Center" />
+		<div class="Container40 FontRobotoRegular"><div class="EmptyBox10"></div>
+			<span [class.Green]="plannedPrice - initialPrice > -1" [class.Orange]="plannedPrice - initialPrice < 0" class="Fs30 FontRobotoLight FontBold Fright"> {{((plannedPrice - initialPrice)
+		<0? '': '+') + ((plannedPrice - initialPrice) | currency:'USD':true:'1.0-0')}}</span></div>
 	</div>
-	
-	<p-accordion>
-		<p-accordionTab *ngFor="let category of categories" header="{{category.name}}">
-			<div *ngFor="let product of products">
-				<div *ngIf="product.categoryId == category.id" class="product-row">
-					<div class="product-name" [class.bold]="product.count > 0">{{product.name}}</div>
-					<div class="product-pm">
+</div>
+<div class="EmptyBox10"></div>
+
+<p-accordion>
+	<p-accordionTab *ngFor="let category of categories" header="{{category.name}}">
+		<div *ngFor="let product of products">
+			<div *ngIf="product.categoryId == category.id" class="product-row">
+
+				<div class="Separator"> </div>
+				<div class="EmptyBox5"></div>
+				<div class="Container60">
+					<span class="LeadenGreen "> {{product.name}} </span> <span class="Fs18">({{product.price | currency:'USD':true:'1.0-0'}})</span>
+									<div class="EmptyBox5"></div>
+									<p-slider [(ngModel)]="product.price" [animate]="true" [min]="getMinValue(product)" [max]="getMaxValue(product)" (onChange)="recalculate()"></p-slider>
+				</div>
+				<div class="Container40">
+					<div class="product-pm Fright">
 						<div class="pm-input">
 							<div class="pm-input-left-button"><p-commandLink (click)="deSelect(product)"><span class="miniButtonRed">-</span></p-commandLink></div>
-						
-							<div class="pm-input-center-input"><input class="miniInput" type="test" [ngModel]="product.count" value="{{product.count}}" (change)="recalculate()"/></div>
-						
+
+							<div class="pm-input-center-input"><input class="miniInput {{getBackground(product)}}" type="test" [(ngModel)]="product.count" value="{{product.count}}" (change)="recalculate()"/></div>
+
 							<div class="pm-input-right-button"><p-commandLink (click)="select(product)"><span class="miniButtonGreen">+</span></p-commandLink></div>
 						</div>
 					</div>
 				</div>
+				<!--div class="product-name" [class.bold]="product.count > 0">{{product.name}}</div-->
+				<div class="EmptyBox5"></div>
+				<span class="FontRobotoLight Fs14">{{product.description}}</span>
+				<div class="EmptyBox5"></div>
 			</div>
-		</p-accordionTab>
-	</p-accordion>
-	<div class="row" style="margin-top:10px;">
-		<div style="text-align: right;">Initial earnings: {{initialPrice}}</div>
-		<div style="text-align: right;">Planned earnings: {{plannedPrice}}</div>
-	</div>
-	
-	<div class="row marginTop10" style="text-align: right;">
-		<div class="col-xs-12">
-			<button id="submitPlan" style="width: 50%; max-width: 200px" pButton type="button" (click)="reviewPlan()" icon="fa-check" label="Review details"></button>
 		</div>
-	</div>
+	</p-accordionTab>
+</p-accordion>
+<div class="row" style="margin-top:10px;">
+	<div style="text-align: right;">Current earnings: {{initialPrice | currency:'USD':true:'1.0-0'}}</div>
+	<div style="text-align: right;">Planned earnings: {{plannedPrice | currency:'USD':true:'1.0-0'}}</div>
+	<div class="EmptyBox10"></div>
+</div>
+
+<div class="Container100">
+	<p-multiSelect [options]="promotions" (onChange)="recalculate()" [(ngModel)]="selectedPromotions" defaultLabel="Apply Promotions"></p-multiSelect>
+	<button id="submitPlan" pButton type="button" class="Fright RaisedButton" (click)="reviewPlan()" icon="fa-chevron-right" iconPos="right" label="Next"></button>
 </div>
