Change name from cheetah to EntityModelUI

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,7 +9,7 @@
       <span class="ButtonLine" id="ButtonLine3"></span>
     </a>
     <a [routerLink]="['/']" id="logo">
-      <img src="assets/images/ng2.png" alt="Cheetah" style="height: 40px;  margin: 0px 0px 0px 0px;" class="Fleft" />
+      <img src="assets/images/ng2.png" alt="EntityModelUI" style="height: 40px;  margin: 0px 0px 0px 0px;" class="Fleft" />
     </a>
 
     <a [routerLink]="['/alerts']" id="show-top-menu" class="ripplelink"><i class="icon-notifications_active"></i></a>
