--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,5 +1,5 @@
 <div class="login">
-	<div class="row"><img style="    max-width: 250px;    max-height: 200px;" src="assets/images/ng2.png" alt="Cheetah"></div>
+	<div class="row"><img style="    max-width: 250px;    max-height: 200px;" src="assets/images/ng2.png" alt="EntityModelUI"></div>
 	<div class="row TexAlCenter">
 			<p-messages [value]="msgs"></p-messages>
 	</div>
