--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><img style="max-width: 150px; margin-top: -7px;margin-left: -15px;" src="assets/images/ng2.png" alt="Cheetah"></a>
+      <a class="navbar-brand" href="#"><img style="max-width: 150px; margin-top: -7px;margin-left: -15px;" src="assets/images/ng2.png" alt="EntityModelUI"></a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
