Menubar, ForeignKey, Parent Screen

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -26,6 +26,8 @@
     <div class="Animated05" id="layout-menu-cover">
       <ul id="menu" class="layout-menu ShadowEffect modena-menu">
         <li role="menuitem"><a class="menulink ripplelink" [routerLink]="['/']"><i class="icon-null"></i><i class="fa fa-home"></i>Home</a></li>
+        <li role="menuitem"><a class="menulink ripplelink" [routerLink]="['/baby']"><i class="icon-null"></i><i class="fa fa-cube"></i>Baby</a></li>
+        <li role="menuitem"><a class="menulink ripplelink" [routerLink]="['/parent']"><i class="icon-null"></i><i class="fa fa-cube"></i>Parent</a></li>
         <li role="menuitem"><a class="menulink ripplelink" (click)="cleanup()" target="_blank"><i class="icon-null"></i><i class="fa fa-times"></i>Reset Data</a></li>
         <li role="menuitem"><a class="menulink ripplelink" (click)="logout()" target="_blank"><i class="icon-null"></i><i class="fa fa-power-off"></i>Logout</a></li>
         <li class="Separator"></li>
