--- a/src/assets/theme/override.css
+++ b/src/assets/theme/override.css
@@ -1,3 +1,4 @@
+/*UI paginator*/
 .ui-paginator .ui-paginator-first,
 .ui-paginator .ui-paginator-prev,
 .ui-paginator .ui-paginator-pages .ui-paginator-page,
@@ -8,22 +9,34 @@
   font-size: 1em;
   padding: 0px 3px !important;
 }
-
 .ui-paginator {
    background-color: #dae8ef;
    border: solid 1px #c1d5df;
 }
-
 .ui-paginator .ui-state-active, .ui-paginator .ui-paginator-pages .ui-state-active {
      color: #546e7a !important;
      border-bottom: solid 3px #546e7a;;
 }
 
+/*UI data table*/
 .ui-datatable .ui-column-filter {
   margin-top: 0px;
   font-size: 1em;
 }
-
 .ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {
     font-size: 1em;
+}
+.ui-datatable table tbody td {
+    padding: 4px 10px !important;
+}
+
+/*Button*/
+.ui-button, .ui-datepicker-buttonpane button {
+    font-size: 12px;
+}
+
+/*Command hyperlink*/
+.ui-widget-content a {
+    color: #0288d1;
+    cursor: pointer !important;
 }
