--- a/src/assets/theme/override.css
+++ b/src/assets/theme/override.css
@@ -40,3 +40,16 @@
     color: #0288d1;
     cursor: pointer !important;
 }
+
+/*Bootstrap overrides modena and reduces height of the topbar*/
+* {
+    -webkit-box-sizing: initial;
+    -moz-box-sizing: initial;
+    box-sizing: initial;
+}
+
+.BootstrapBorder {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
